added a new section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Guardian</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <header class="the-header">
+        <div class="nav-head">
+            <nav class="nav-bar">
+                <img class="icon-img" src="./Images/Group 40071 (2).png" alt=""> 
+                <h1 class="Guardian">Travel <span class="travel">Guardian</span></h1>
+                <ul>
+                    <li class="home"><a href=""></a>Home</li>
+                    <li><a href=""></a>Packages</li>
+                    <li><a href=""></a>Testimonial</li>
+                    <li><a href=""></a>Blog</li>
+                    <li><a href=""></a>Contact</li>
+                </ul>
+        </div>
+        <!-- banner section  -->
+        <section>
+            <div class="banner">
+                <h1 class="h1-title">Explore Your Travel</h1>
+                <p class="dolor">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+
+               <div>
+                <button>Where Go</button>
+                <button>When</button>
+                <button>Select Type</button>
+                <button>Find Now</button>
+               </div>
+              
+            </div>
+        </section>
+    </header>
+
 </body>
+
 </html>
