added end of projects

--- a/index.html
+++ b/index.html
@@ -131,9 +131,40 @@
     <h6>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</h6>
     <div><img src="./Images/Rectangle 111 (1).png" alt=""></div>
 </div>
+
+
+<div class="news">
+    
+    <h1>Newsletter</h1>
+    <p>Get your daily dose of travel news & tips. Sign up today!</p>
+    <div class="input-container">
+        <input type="text" placeholder="Enter Your Name">
+        <input type="text" placeholder="Enter Your Email">
+       <div class="college">
+        <img src="./Images/Rectangle 8 (1).png" alt="">
+       </div>
+
+    </div>
+</div>
+
+
     </main>
 
+<footer class="footer">
+    <div class="travel-and">
+        <img src="./Images//Group 40071 (2).png" alt="">
+        <h1>Travel Guardian</h1>
+        
+    </div>
 
+   <div class="footer">
+    <h6>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam.</h6>
+    <img src="./Images/twitter.png" alt="">
+    <img src="./Images/facebook.png" alt="">
+    <img src="./Images/insta.png" alt=""><br>
+    <h6>2017, All Rights Reserved.</h6>
+   </div>
+</footer>
 </body>
 
 </html>
